[package]
name = "manualmap"
version = "0.1.0"
description = "x64 manual-mapping DLL injector cdylib for Windows."
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "manualmap"
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
] }
